security-groups.tf

#Security Group 

resource "aws_security_group" "nginx_instnaces_access" {
  vpc_id = aws_vpc.Reut_vpc.id
  name   = "nginx-access" 
  }

resource "aws_security_group_rule" "nginx_http_acess" {
  description       = "allow http access from anywhere"
  from_port         = 80
  protocol          = "tcp"
  security_group_id = aws_security_group.nginx_instnaces_access.id
  to_port           = 80
  type              = "ingress"
  cidr_blocks       = ["0.0.0.0/0"]
  }

resource "aws_security_group_rule" "nginx_outbound_anywhere" {
  description = "allow outbound traffic to anywhere"
  from_port = 0
  protocol = "-1"
  security_group_id = aws_security_group.nginx_instnaces_access.id
  to_port = 0
  type = "egress"
  cidr_blocks = ["0.0.0.0/0"]
 }

 #Security Group private
